# dts_of_ocaml

./: .gitignore  README.md  collect.ml  dts_of_ocaml.ml  dts_of_ocaml.opam  dune  dune-project  typegen.ml  typeprint.ml  util.ml
examples/simple/: dune  js.ml  str.d.ts
